# StockDataMiner

./: .replit  MONGODB_SETUP.md  api.py  app.py  batch_process.py  database.py  database_diagnostics.py  export_database.py  fetch_all_stocks.py  mongodb_manager.py  process_tickers.py  pyproject.toml  replit.nix  stock_data.db  stock_data.py  yfinance_cache.sqlite  yfinance_simple_cache.db
attached_assets/: Pasted-1-How-to-Optimize-the-Code-Based-on-your-code-structure-app-py-stock-data-py-database-py-here--1743474657617.txt  Pasted-Some-studies-of-how-it-was-that-Prussia-resisted-the-wave-of-European-democratization-in-the-ninetee-1743455834339.txt  Pasted-Ticker-and-Tickers-Ticker-Tickers-Stock-yfinance-Ticker-get-isin-yfinance-Ticker-isin-yfinance-1743454950571.txt  Pasted-streamlit-errors-StreamlitDuplicateElementId-There-are-multiple-text-area-elements-with-the-same-au-1743475129996.txt  Pasted-streamlit-errors-StreamlitDuplicateElementKey-There-are-multiple-elements-with-the-same-key-status-1743475324473.txt
exports/: data_types.json  db_structure.json  tickers.json
exports/AAPL/Historical_Data/: Price_History.xlsx
exports/AES/Historical_Data/: Price_History.xlsx
exports/AI/Historical_Data/: Price_History.xlsx
exports/AMZN/Historical_Data/: Price_History.xlsx
exports/BEP/Historical_Data/: Price_History.xlsx
exports/CHPT/Historical_Data/: Price_History.xlsx
exports/DOCN/Historical_Data/: Price_History.xlsx
exports/ENPH/Historical_Data/: Price_History.xlsx
exports/FSLR/Historical_Data/: Price_History.xlsx
(+16 files in other folders)
