[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "dnspython>=2.7.0",
    "flask>=3.1.0",
    "numpy>=2.2.4",
    "openai>=1.70.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pymongo[srv]==4.5.0",
    "requests-cache>=1.2.1",
    "scipy>=1.15.2",
    "streamlit>=1.44.0",
    "trafilatura>=2.0.0",
    "yfinance>=0.2.55",
]
